[package]
name = "mash"
version = "0.1.2"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "A 3D mesh loading/manipulation library"

documentation = "https://docs.rs/mash"
repository = "https://github.com/dylanmckay/mash"
readme = "README.md"
license = "MIT"

keywords = ["3d", "mesh", "model", "wavefront", "obj"]

[features]
default = ["wavefront"]

wavefront = ["tobj"]

[dependencies]
error-chain = "0.10"
tobj = { version = "0.1.5", optional = true }
