[package]
name = "mash"
version = "1.0.0"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "A 3D mesh loading/manipulation library"

documentation = "https://docs.rs/mash"
repository = "https://github.com/dylanmckay/mash"
readme = "README.md"
license = "MIT"

keywords = ["3d", "mesh", "model", "wavefront", "obj"]

[features]
default = ["wavefront"]

wavefront = ["tobj"]

[dependencies]
error-chain = "^0.12"
tobj = { version = "^1.0", optional = true }
